menambahkan gambar dan transition

--- a/demo.html
+++ b/demo.html
@@ -74,6 +74,17 @@
 								<li><span class="fragment">Analisis, desain, konstruksi, dan testing dapat diperkirakan seperti yang dinginkan.</span> </li>
 						</ul>
 					</section>
+					<section data-background="#4d7e65" data-auto-animate data-auto-animate-easing="cubic-bezier(0.770, 0.000, 0.175, 1.000)">
+						<h2>Agile Methodology</h2>
+						
+						<div class="r-hstack justify-center">
+							
+							<img src="gambar2.png">
+							<div data-id="box1" style="background: #999; width: 50px; height: 50px; margin: 10px; border-radius: 5px;"></div>
+							<div data-id="box2" style="background: #999; width: 50px; height: 50px; margin: 10px; border-radius: 5px;"></div>
+							<div data-id="box3" style="background: #999; width: 50px; height: 50px; margin: 10px; border-radius: 5px;"></div>
+						</div>
+						</section>
 			</div>
 
 		</div>
