--- a/demo.html
+++ b/demo.html
@@ -85,6 +85,13 @@
 							<div data-id="box3" style="background: #999; width: 50px; height: 50px; margin: 10px; border-radius: 5px;"></div>
 						</div>
 						</section>
+					<section style="text-align: left;">
+<h1>THE END</h1>
+<p>
+    - <a href="https://slides.com">Try the online editor</a> <br>
+    - <a href="https://github.com/hakimel/reveal.js">Source code &amp; documentation</a>
+</p>
+</section>
 			</div>
 
 		</div>
